[gd_scene load_steps=2 format=3 uid="uid://pkqgfph48b1m"]

[ext_resource type="Script" path="res://scenes/menu/ActionPanel.gd" id="1_ka88f"]

[node name="ActionPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_ka88f")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ActionLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="KeyboardButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true

[node name="JoypadButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
